<resources>
    <!-- NEW: Roles array for Spinner -->
    <string-array name="roles_array">
        <item>Select your role</item>
        <item>Student</item>
        <item>Tutor</item>
    </string-array>
    <string-array name="tutorial_topics">
        <item>Select a topic...</item>
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Computer Science</item>
        <item>English</item>
        <item>History</item>
    </string-array>



    <!-- Other string resources -->
    <string name="app_name">MyApp</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_profile">Profile</string>
    <string name="title_tutorialManagement">Tutorial Management</string>
    <string name="title_recs">View Recommendations</string>
    <string name="title_activity_tutor_dashboard">TutorDashboard</string>
    <string name="title_activity_student_dashboard">StudentDashboard</string>
    <string name="title_home">Home</string>
    <string name="title_search_for_tutorials">Search</string>
    <string name="title_community">Community</string>

    <!-- Reviews / Profile (localization) -->
    <string name="reviews">Reviews</string>
    <string name="reviews_count">Reviews (%1$d)</string>
    <string name="see_all_reviews">See all reviews</string>
    <string name="no_reviews_yet">No reviews yet</string>
    
    <!-- Reviews sorting options -->
    <string-array name="reviews_sort_options">
        <item>Newest</item>
        <item>Oldest</item>
        <item>Rating: High to Low</item>
        <item>Rating: Low to High</item>
    </string-array>
</resources>
