<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.csci3130group1.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_tutorial_management"
        android:name="com.example.csci3130group1.ui.TutorialManagement.TutorialManagementFragment"
        android:label="@string/title_tutorialManagement"
        tools:layout="@layout/fragment_tutorial_management" />

    <fragment
        android:id="@+id/navigation_recommendations"
        android:name="com.example.csci3130group1.ui.viewRecommendationsTutorDashboard.RecommendationsFragment"
        android:label="@string/title_recs"
        tools:layout="@layout/fragment_recs" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.csci3130group1.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />
</navigation>